<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoxApp</string>
    <string name="action_settings">Configuracion</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="sing_up">Registrarse</string>
    
    <string name="logo1">Caja</string>
    <string name="Save">Guardar</string>
    <string name="mail1">Correo electronico</string>
    <string name="mail2">Repita Correo</string>
    <string name="id">Cedula</string>
    <string name="pass1">Contrasena</string>
    <string name="pass2">Repita Contrasena</string>
    
    <string name="IdS">Inicio de Sesion</string>
    <string name="BOK">Ingresar</string>
    <string name="title_activity_one1">ONE1</string>
    
    <string name="WOD">Trabajo del dia (WOD)</string>
    <string name="RM">Repeticion Maxima (RM)</string>
    <string name="RECO">Record de WOD</string>
    <string name="TI">Modulo del Box</string>
    
   	<string name="SEC">Seleccionar Clase</string>
	<string name="HD">Horarios disponibles</string>
	<string name="DINA">Boton Dinamico</string>


    <string-array name="HORARIOS">
        
        <item>Horarios Disponibles</item>
        
        <item>06:00 AM Wod</item>
        <item>07:00 AM Wod</item>
        <item>08:00 AM Wod</item>
        <item>09:00 AM Open Box</item>
        <item>10:00 AM Open Box</item>
        <item>11:00 AM Open Box</item>
        <item>12:00 AM Open Box</item>
        <item>01:00 AM Open Box</item>
        <item>02:00 PM Fundacion</item>
        <item>03:00 PM Wod</item>
        <item>04:00 PM Wod</item>
        <item>05:00 PM Wod</item>
    	<item>06:00 PM Wod</item>
    	<item>07:00 PM Wod</item>
    	<item>08:00 PM Wod</item>
    
    </string-array>

	
    
    
    
</resources>
